# static-program-analyzer

./: .gitignore
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: Parser.cpp  Parser.h  Token.cpp  Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h
Team00/Code00/src/spa/src/Tokens/: StringToken.cpp  Token.cpp  Token.h  TokenEnum.h
Team13/Code13/src/spa/: CMakeLists.txt
Team13/Code13/src/spa/src/: CodeExtractor.h  CustomType.h  CustomTypes.h  ExprEvaluator.cpp  ExprEvaluator.h  ExprParser.cpp  ExprTokensValidator.cpp  ExprTokensValidator.h  ExprValidator.cpp  ExprValidator.h  LIST_OF_STMT_IDX.h  LIST_OF_VAR_NAME.h  ListOfTNodePointers.h  PKB.cpp  PKB.h  PQLDriver.cpp  PQLEvaluator.cpp  PQLEvaluator.h  PQLParser.cpp  PQLParser.h  PQLUserInput.cpp  PQLUserInput.h  Parser.cpp  Parser.h  QueryInfo.cpp  QueryInfo.h  QueryPreprocessor.cpp  QueryPreprocessor.h  QueryResult.cpp  QueryResult.h  QuerySyntaxValidator.cpp  QuerySyntaxValidator.h  STMTS.h  STMT_IDX.h  STMT_TABLE.cpp  STMT_TABLE.h  Statement.h  StmtTable.cpp  StmtTable.h  TNode.cpp  (+10 more)
Team13/Code13/src/spa/src/frontend/: ASTBuilder.cpp  ASTBuilder.h  CFGBuilder.cpp  CFGBuilder.h  CFGNode.cpp  CFGNode.h  CMakeLists.txt  CodeExtractor.cpp  CodeExtractor.h  ExprEvaluator.cpp  ExprEvaluator.h  ExprParser.cpp  ExprParser.h  ExprValidator.cpp  ExprValidator.h  FileReader.cpp  FileReader.h  FrontendTypes.h  FrontendWrapper.cpp  FrontendWrapper.h  Parser.cpp  Parser.h  SimpleParser.cpp  SimpleParser.h  SimpleValidator.cpp  SimpleValidator.h  Statement.cpp  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Tokenizer.cpp  Tokenizer.h
Team13/Code13/src/spa/src/pkb/: BTNode.h  BTNode.tpp  CFG.cpp  CFG.h  CFGManager.cpp  CFGManager.h  DataManager.cpp  DataManager.h  DataTables.cpp  DataTables.h  DesignExtractor.cpp  DesignExtractor.h  PKB.cpp  PKB.h  PatternManager.cpp  PatternManager.h  Procedures.cpp  Procedures.h  RelationManager.cpp  RelationManager.h  Statements.cpp  Statements.h  StmtTable.cpp  StmtTable.h  TNode.cpp  TNode.h  VarTable.cpp  VarTable.h  Variables.cpp  Variables.h  data_manager.cpp  data_manager.h  data_tables.cpp  data_tables.h  design_extractor.cpp  relation_manager.cpp  relation_manager.h
Team13/Code13/src/spa/src/pkb/relation/: FollowsStarTable.cpp  FollowsStarTable.h  FollowsTable.cpp  FollowsTable.h  InverseFollowsStarTable.cpp  InverseFollowsStarTable.h  InverseFollowsTable.cpp  InverseFollowsTable.h  InverseParentStarTable.cpp  (+23 more)
Team13/Code13/src/spa/src/pql/: PQLCustomTypes.h  PQLDriver.cpp  PQLDriver.h  PQLEvaluator.cpp  PQLEvaluator.h  PQLOptimization.cpp  PQLOptimization.h  PQLOptimizedEvaluator.cpp  PQLOptimizedEvaluator.h  PQLParser.cpp  PQLParser.h  PQLParserStorage.cpp  PQLParserStorage.h  PQLProjector.cpp  PQLProjector.h  PQLTokenizer.cpp  PQLTokenizer.h  QueryInfo.cpp  QueryInfo.h  QueryResult.cpp  QueryResult.h  QueryRules.cpp  QueryRules.h  QuerySyntacticValidator.cpp  QuerySyntacticValidator.h  QuerySyntaxValidator.cpp  QuerySyntaxValidator.h  QueryValidator.cpp  QueryValidator.h  WhitespaceHandler.cpp  WhitespaceHandler.h
Team13/Code13/src/spa/src/testUtils/: Statement.cpp  TreeTraverse.cpp  TreeTraverse.h
Team13/Code13/src/spa/src/test_utils/: Statement.h  TreeTraverse.cpp  TreeTraverse.h
(+424 files in other folders)
